[package]
name = "algorithms"
version = "0.1.0"
authors = ["Leto <justinpraxis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
typed-arena = "2.0.1"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "sorting"
harness = false

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
